@@ -24,6 +24,8 @@ Version 2.12.1
   memory nodes, and add verbose messages and warnings if some
   performance info are incomplete or missing.
   Thanks to Antoine Morvan for the report.
+* Fix CPU and memory binding on different locations,
+  thanks to Antoine Morvan for the report.
 
 
 Version 2.12.0
